# arm

./: .gitignore  README.md  activate_lerobot.ps1
config/: elbow_flex_manual_limits.json  elbow_flex_phase.json  so101_joint_mapping.backup_20260626_224615.json  so101_joint_mapping.json  wrist_flex_manual_limits.json
ros2_so101_ws/src/so101_description/: CMakeLists.txt  README.md  package.xml
ros2_so101_ws/src/so101_description/launch/: display.launch.py  display_real_state.launch.py  play_recording.launch.py  rviz_udp_control.launch.py
ros2_so101_ws/src/so101_description/rviz/: so101.rviz
ros2_so101_ws/src/so101_description/scripts/: calibrated_joint_slider_gui.py  joint_states_udp_bridge.py  play_recording_joint_states.py  real_state_udp_receiver.py
ros2_so101_ws/src/so101_description/urdf/: so101_6dof_rviz.urdf
ros2_so101_ws/src/so101_moveit_config/: CMakeLists.txt  package.xml
ros2_so101_ws/src/so101_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_scene_monitor.yaml  so101.srdf  trajectory_execution.yaml
ros2_so101_ws/src/so101_moveit_config/launch/: moveit_demo.launch.py  moveit_real_arm.launch.py
ros2_so101_ws/src/so101_moveit_config/rviz/: moveit.rviz
ros2_so101_ws/src/so101_moveit_config/scripts/: display_trajectory_udp_bridge.py  so101_trajectory_controller.py
scripts_local/: detect_so101_motor_mapping.py  elbow_flex_absolute_test.py  elbow_flex_goal_register_probe.py  elbow_flex_record_control.py  find_elbow_flex_phase.py  fix_elbow_flex_phase.py  flip_rviz_joint_preserve_pose.py  inspect_so101_raw_servos.py  keyboard_teleop_so101.py  manual_record_replay_so101.py  publish_lerobot_state_udp.py  rviz_udp_lerobot_bridge.py  scan_feetech_bus.py  single_servo_record_control.py  so101_phase_utils.py  sweep_elbow_flex_phase.py  test_elbow_flex_direct.py  test_elbow_raw_direction.py  tune_so101_rviz_offsets.py
