<?xml version="1.0"?>
<package format="3">
  <name>so101_moveit_config</name>
  <version>0.0.1</version>
  <description>MoveIt 2 planning configuration for the SO-101 6DOF arm.</description>
  <maintainer email="user@example.com">SO-101 User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>so101_description</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
